--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ form button {
     width: 4rem;
 }
 
-form button:focus {
+form button:focus, :hover {
     border: 0.1rem solid black;
     border-radius: 2rem;
     outline: none;
